--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>React App</title>
+    <title>Charles Ivan A. Brena Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
